--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     name="description"
     content="Maximize your earnings and achieve financial freedom with Moneyaard. Discover the best ways to make money online with our expert tips and strategies."
   />
+  <meta name="google-site-verification" content="0JdFAw0ZvPsTq_Vjh7gJkqOK3YtXIQFWafPbAPxoy6g" />
 </head>
 
 <body>
