add some main pages

--- a/index.html
+++ b/index.html
@@ -194,15 +194,17 @@
       </div>
       <div class="footer_box">
         <h3>HELPFUL LINKS</h3>
-        <a href="./Moneyaard L All Post/AboutUs.html">About Us</a>
-        <a href="./Moneyaard L All Post/privacyPrivacy.html">Privacy policy</a>
-        <a href="./Moneyaard L All Post/TermsAndConditions.html"
+        <a href="About_us.html">About Us</a>
+        <a href="contact_us.html">Contact Us</a>
+        <a href="privacy_policy.html">Privacy policy</a>
+        <a href="terms_and_condition.html"
           >Terms & Condition</a
         >
+        <a href="./sitemap.xml">sitmap</a>
       </div>
       <div class="footer_box">
         <h3>GET IN TOUCH</h3>
-        <a href="mailto:Moneyaard Lforyou@gmail.com">Moneyaard@gmail.com</a>
+        <a href="mailto:moneyaard@gmail.com">Moneyaard@gmail.com</a>
       </div>
       <div class="footer_box">
         <h3>CONNECT WITH US</h3>
