Add the adsense code and GA tracking code

--- a/index.html
+++ b/index.html
@@ -17,7 +17,31 @@
     name="description"
     content="Maximize your earnings and achieve financial freedom with Moneyaard. Discover the best ways to make money online with our expert tips and strategies."
   />
-  <meta name="google-site-verification" content="0JdFAw0ZvPsTq_Vjh7gJkqOK3YtXIQFWafPbAPxoy6g" />
+  <meta
+    name="google-site-verification"
+    content="0JdFAw0ZvPsTq_Vjh7gJkqOK3YtXIQFWafPbAPxoy6g"
+  />
+  <!-- Tracker coder -->
+  <!-- Google tag (gtag.js) -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-6J3NTTQECM"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-6J3NTTQECM");
+  </script>
+  <!-- adsense code  -->
+  <script
+    async
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3774675720442745"
+    crossorigin="anonymous"
+  ></script>
 </head>
 
 <body>
@@ -197,9 +221,7 @@
         <a href="About_us.html">About Us</a>
         <a href="contact_us.html">Contact Us</a>
         <a href="privacy_policy.html">Privacy policy</a>
-        <a href="terms_and_condition.html"
-          >Terms & Condition</a
-        >
+        <a href="terms_and_condition.html">Terms & Condition</a>
         <a href="./sitemap.xml">sitmap</a>
       </div>
       <div class="footer_box">
