--- a/Moneyaard_Post/How_to_Make_Money_from_E-Commerce_A_Guide.html
+++ b/Moneyaard_Post/How_to_Make_Money_from_E-Commerce_A_Guide.html
@@ -16,6 +16,27 @@
   ></script>
   <link rel="stylesheet" href="Moneyaard_Post.css" type="text/css" />
   <link rel="icon" type="image/png" href="../assets/Moneyaard_logo.png" />
+    <!-- Tracker coder -->
+  <!-- Google tag (gtag.js) -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-6J3NTTQECM"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-6J3NTTQECM");
+  </script>
+  <!-- adsense code  -->
+  <script
+    async
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3774675720442745"
+    crossorigin="anonymous"
+  ></script>
 </head>
 
 <body>
