Change the logo link

--- a/Moneyaard_Post/Moneyaard_Post.html
+++ b/Moneyaard_Post/Moneyaard_Post.html
@@ -25,7 +25,7 @@
 <body>
   <!--navigation bar top-->
   <nav>
-    <a href="https://manoarya.com/" class="navLeft">
+    <a href="https://moneyaard.com/" class="navLeft">
       <img src="../assets/Moneyaard_logo.png" alt="Moneyaard_logo" />
       <div
         style="
@@ -98,7 +98,7 @@
           src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4365651039511906"
           crossorigin="anonymous"
         ></script>
-        <!-- Manoarya Ads -->
+        <!-- moneyaard Ads -->
         <ins
           class="adsbygoogle"
           style="display: block"
@@ -130,7 +130,7 @@
           src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4365651039511906"
           crossorigin="anonymous"
         ></script>
-        <!-- Manoarya Ads -->
+        <!-- moneyaard Ads -->
         <ins
           class="adsbygoogle"
           style="display: block"
@@ -170,7 +170,7 @@
           src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4365651039511906"
           crossorigin="anonymous"
         ></script>
-        <!-- Manoarya Ads -->
+        <!-- moneyaard Ads -->
         <ins
           class="adsbygoogle"
           style="display: block"
@@ -239,7 +239,7 @@
           src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4365651039511906"
           crossorigin="anonymous"
         ></script>
-        <!-- Manoarya Ads -->
+        <!-- moneyaard Ads -->
         <ins
           class="adsbygoogle"
           style="display: block"
@@ -282,7 +282,7 @@
           src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4365651039511906"
           crossorigin="anonymous"
         ></script>
-        <!-- Manoarya Ads -->
+        <!-- moneyaard Ads -->
         <ins
           class="adsbygoogle"
           style="display: block"
