--- a/Moneyaard_Post/Online_Freelancing_A_comprehensive_Guide_to_Making_Money_as_Freelancer.html
+++ b/Moneyaard_Post/Online_Freelancing_A_comprehensive_Guide_to_Making_Money_as_Freelancer.html
@@ -45,7 +45,7 @@
 <body>
   <!--navigation bar top-->
   <nav>
-    <a href="https://manoarya.com/" class="navLeft">
+    <a href="https://moneyaard.com/" class="navLeft">
       <img src="../assets/Moneyaard_logo.png" alt="Moneyaard_logo" />
       <div
         style="
