--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
     src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3774675720442745"
     crossorigin="anonymous"
   ></script>
+  
+  <meta name="monetag" content="d3b60953fe97239ae78bcb46a199368b">
 </head>
 
 <body>
