--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
   ></script>
   
   <meta name="monetag" content="d3b60953fe97239ae78bcb46a199368b">
+<script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://inklinkor.com/tag.min.js',6029228,document.body||document.documentElement)</script>
 </head>
 
 <body>
