--- a/index.html
+++ b/index.html
@@ -2,251 +2,250 @@
 
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <meta
-    name="viewport"
-    content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
-  />
-  <link rel="icon" type="image/png" href="./assets/Moneyaard_logo.png" />
-  <link rel="stylesheet" href="style.css" />
-  <script
-    src="https://kit.fontawesome.com/9e0ab445c3.js"
-    crossorigin="anonymous"
-  ></script>
-  <title>Moneyaard : Make money online</title>
-  <meta
-    name="description"
-    content="Maximize your earnings and achieve financial freedom with Moneyaard. Discover the best ways to make money online with our expert tips and strategies."
-  />
-  <meta
-    name="google-site-verification"
-    content="0JdFAw0ZvPsTq_Vjh7gJkqOK3YtXIQFWafPbAPxoy6g"
-  />
-  <!-- Tracker coder -->
-  <!-- Google tag (gtag.js) -->
-  <script
-    async
-    src="https://www.googletagmanager.com/gtag/js?id=G-6J3NTTQECM"
-  ></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag("js", new Date());
+<meta
+name="viewport"
+content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
+/>
+<link rel="icon" type="image/png" href="./assets/Moneyaard_logo.png" />
+<link rel="stylesheet" href="style.css" />
+<script
+src="https://kit.fontawesome.com/9e0ab445c3.js"
+crossorigin="anonymous"
+></script>
+<title>Moneyaard : Make money online</title>
+<meta
+name="description"
+content="Maximize your earnings and achieve financial freedom with Moneyaard. Discover the best ways to make money online with our expert tips and strategies."
+/>
+<meta
+name="google-site-verification"
+content="0JdFAw0ZvPsTq_Vjh7gJkqOK3YtXIQFWafPbAPxoy6g"
+/>
+<!-- Tracker coder -->
+<!-- Google tag (gtag.js) -->
+<script
+async
+src="https://www.googletagmanager.com/gtag/js?id=G-6J3NTTQECM"
+></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag() {
+dataLayer.push(arguments);
+}
+gtag("js", new Date());
 
-    gtag("config", "G-6J3NTTQECM");
-  </script>
-  <!-- adsense code  -->
-  <script
-    async
-    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3774675720442745"
-    crossorigin="anonymous"
-  ></script>
-  
-  <meta name="monetag" content="d3b60953fe97239ae78bcb46a199368b">
-<script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://inklinkor.com/tag.min.js',6029228,document.body||document.documentElement)</script>
+gtag("config", "G-6J3NTTQECM");
+</script>
+<!-- adsense code  -->
+<script
+async
+src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3774675720442745"
+crossorigin="anonymous"
+></script>
 </head>
 
 <body>
-  <!-- top navigation  -->
-  <nav>
-    <!-- logo  container  -->
-    <div id="logo_container">
-      <img src="./assets/Moneyaard_logo.png" alt="Moneyaard Logo" />
-      <div
-        style="
-          display: flex;
-          justify-content: center;
-          align-items: flex-start;
-          flex-direction: column;
-        "
-      >
-        <b style="color: #399b53; font-size: 10px">Moneyaard</b>
-        <i style="font-size: 10px">Make money online</i>
-      </div>
-    </div>
-    <!-- search input -->
-    <input
-      type="search"
-      id="searchInput"
-      placeholder="Search"
-      onclick="searchInput()"
-      onkeyup="searchNow()"
-    />
-    <!-- user googel sign in -->
-    <div id="user_container" onclick="user()">
-      <img
-        src="https://cdn.pixabay.com/photo/2017/11/10/05/48/user-2935527_960_720.png"
-        alt="userPic"
-        id="googleuserPic"
-      />
-    </div>
-  </nav>
-  <!-- bottom nav for mobile and sidebar for destop -->
-  <div id="bottom_nav">
-    <div class="bottom_box" onclick="home()">
-      <i class="fas fa-home"></i>
-    </div>
-    <!-- <div class="bottom_box" onclick="explore()">
+<!-- top navigation  -->
+<nav>
+<!-- logo  container  -->
+<div id="logo_container">
+<img src="./assets/Moneyaard_logo.png" alt="Moneyaard Logo" />
+<div
+style="
+display: flex;
+justify-content: center;
+align-items: flex-start;
+flex-direction: column;
+"
+>
+<b style="color: #399b53; font-size: 10px">Moneyaard</b>
+<i style="font-size: 10px">Make money online</i>
+</div>
+</div>
+<!-- search input -->
+<input
+type="search"
+id="searchInput"
+placeholder="Search"
+onclick="searchInput()"
+onkeyup="searchNow()"
+/>
+<!-- user googel sign in -->
+<div id="user_container" onclick="user()">
+<img
+src="https://cdn.pixabay.com/photo/2017/11/10/05/48/user-2935527_960_720.png"
+alt="userPic"
+id="googleuserPic"
+/>
+</div>
+</nav>
+<!-- bottom nav for mobile and sidebar for destop -->
+<div id="bottom_nav">
+<div class="bottom_box" onclick="home()">
+<i class="fas fa-home"></i>
+</div>
+<!-- <div class="bottom_box" onclick="explore()">
       <i class="far fa-compass"></i>
     </div> -->
-  </div>
-  <!-- Moneyaard L computer classes -->
-  <style>
-    #mcc_container {
-      height: 200px;
-      width: 100%;
-      right: 0;
-      transform: scale(0.98);
-    }
+</div>
+<!-- Moneyaard L computer classes -->
+<style>
+#mcc_container {
+height: 200px;
+width: 100%;
+right: 0;
+transform: scale(0.98);
+}
 
-    #mcc_container img {
-      height: 100%;
-      width: 100%;
-      object-fit: contain;
-      border-radius: 10px;
-    }
+#mcc_container img {
+height: 100%;
+width: 100%;
+object-fit: contain;
+border-radius: 10px;
+}
 
-    #mcc_container img:hover {
-      cursor: pointer;
-    }
+#mcc_container img:hover {
+cursor: pointer;
+}
 
-    @media only screen and (min-width: 1020px) {
-      #mcc_container {
-        height: 100%;
-        width: 95%;
-        float: right;
-      }
-    }
-  </style>
-  <a href="mailto:Moneyaard Lforyou.gmail.com" id="mcc_container">
-    <img src="./assets/banner.png" alt="Moneyaard services" />
-  </a>
-  <!-- Recommend content for best expirance -->
-  <style>
-    #recommend_container {
-      height: 100%;
-      width: 100%;
-      float: right;
-    }
+@media only screen and (min-width: 1020px) {
+#mcc_container {
+height: 100%;
+width: 95%;
+float: right;
+}
+}
+</style>
+<a href="mailto:Moneyaard Lforyou.gmail.com" id="mcc_container">
+<img src="./assets/banner.png" alt="Moneyaard services" />
+</a>
+<!-- Recommend content for best expirance -->
+<style>
+#recommend_container {
+height: 100%;
+width: 100%;
+float: right;
+}
 
-    #recommend_container h1 {
-      padding: 10px 20px;
-      color: black;
-      font-size: 20px;
-      text-align: center;
-    }
+#recommend_container h1 {
+padding: 10px 20px;
+color: black;
+font-size: 20px;
+text-align: center;
+}
 
-    #recommend {
-      height: 100%;
-      width: 100%;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      background: white;
-    }
+#recommend {
+height: 100%;
+width: 100%;
+display: flex;
+flex-wrap: wrap;
+justify-content: center;
+background: white;
+}
 
-    @media only screen and (min-width: 1020px) {
-      #recommend_container {
-        height: 100%;
-        width: 95%;
-        float: right;
-      }
+@media only screen and (min-width: 1020px) {
+#recommend_container {
+height: 100%;
+width: 95%;
+float: right;
+}
 
-      #recommend_container h1 {
-        padding: 10px 20px;
-        font-size: 30px;
-        color: black;
-        text-align: start;
-        font-size: 25px;
-      }
-    }
-  </style>
-  <div id="recommend_container">
-    <h1>Recommended for you</h1>
-    <!-- pulled all recommend items inside of the recommend div -->
-    <div id="recommend"></div>
-    <h1>All Posts</h1>
-  </div>
-  <!--js data pulled hare  -->
-  <div id="container" onclick="userClose()"></div>
+#recommend_container h1 {
+padding: 10px 20px;
+font-size: 30px;
+color: black;
+text-align: start;
+font-size: 25px;
+}
+}
+</style>
+<div id="recommend_container">
+<h1>Recommended for you</h1>
+<!-- pulled all recommend items inside of the recommend div -->
+<div id="recommend"></div>
+<h1>All Posts</h1>
+</div>
+<!--js data pulled hare  -->
+<div id="container" onclick="userClose()"></div>
 
-  <!-- search suggestion container -->
-  <div id="search_container" onclick="searchCloser()">
-    <div id="search_Suggestion">
-      <ul id="myUL"></ul>
-    </div>
-  </div>
+<!-- search suggestion container -->
+<div id="search_container" onclick="searchCloser()">
+<div id="search_Suggestion">
+<ul id="myUL"></ul>
+</div>
+</div>
 
-  <!-- user auth by google -->
-  <div id="user_login_con">
-    <button onclick="userClose()"><i class="fas fa-times"></i></button>
-    <button id="googleAuthBtn">
-      <img
-        src="https://cdn-icons-png.flaticon.com/512/2702/2702602.png"
-        alt="googel image"
-      />Sign in with Google
-    </button>
-  </div>
+<!-- user auth by google -->
+<div id="user_login_con">
+<button onclick="userClose()"><i class="fas fa-times"></i></button>
+<button id="googleAuthBtn">
+<img
+src="https://cdn-icons-png.flaticon.com/512/2702/2702602.png"
+alt="googel image"
+/>Sign in with Google
+</button>
+</div>
 
-  <!-- add input page stucture -->
-  <div id="add_input_container">
-    <div id="input_Con_Closer" onClick="closeAdd()">
-      <i class="fas fa-times"></i>
-    </div>
-    <form onSubmit="return false" id="QuotesAdded">
-      <textarea
-        id="addInput"
-        placeholder="Add Quotes"
-        cols="30"
-        rows="10"
-        required
-      ></textarea>
-      <button type="submit">Add Quotes</button>
-    </form>
-  </div>
+<!-- add input page stucture -->
+<div id="add_input_container">
+<div id="input_Con_Closer" onClick="closeAdd()">
+<i class="fas fa-times"></i>
+</div>
+<form onSubmit="return false" id="QuotesAdded">
+<textarea
+id="addInput"
+placeholder="Add Quotes"
+cols="30"
+rows="10"
+required
+></textarea>
+<button type="submit">Add Quotes</button>
+</form>
+</div>
 
-  <!-- aleart the total post  -->
-  <div id="Message"></div>
+<!-- aleart the total post  -->
+<div id="Message"></div>
 
-  <!--footer-->
-  <footer>
-    <div id="footer_items">
-      <div class="footer_box">
-        <img src="./assets/Moneyaard_logo.png" alt="Moneyaard logo" />
-        <h3>
-          Moneyaard <br />
-          <span style="color: black; font-size: 15px">Make Money online</span>
-        </h3>
-      </div>
-      <div class="footer_box">
-        <h3>HELPFUL LINKS</h3>
-        <a href="About_us.html">About Us</a>
-        <a href="contact_us.html">Contact Us</a>
-        <a href="privacy_policy.html">Privacy policy</a>
-        <a href="terms_and_condition.html">Terms & Condition</a>
-        <a href="./sitemap.xml">sitmap</a>
-      </div>
-      <div class="footer_box">
-        <h3>GET IN TOUCH</h3>
-        <a href="mailto:moneyaard@gmail.com">Moneyaard@gmail.com</a>
-      </div>
-      <div class="footer_box">
-        <h3>CONNECT WITH US</h3>
-        <a href="https://www.facebook.com/manohar.anamd">Facebook</a>
-        <a href="#">Twitter</a>
-        <a href="https://youtu.be/Q1-4Zzfvglk">YouTube</a>
-        <a href="#">Instagram</a>
-        <a href="https://www.linkedin.com/in/manohar-anand-4177701b6"
-          >Linkedin</a
-        >
-      </div>
-      <p>Copyright © 2023 All Right Reserved By Moneyaard.</p>
-    </div>
-  </footer>
-  <script src="AddPost.js" type="text/javascript" charset="utf-8"></script>
-  <script src="index.js" type="text/javascript" charset="utf-8"></script>
-  <script src="explore.js" type="text/javascript" charset="utf-8"></script>
-  <script src="home.js" type="text/javascript" charset="utf-8"></script>
-  <script src="firebase.js" type="module" charset="utf-8"></script>
+<!--footer-->
+<footer>
+<div id="footer_items">
+<div class="footer_box">
+<img src="./assets/Moneyaard_logo.png" alt="Moneyaard logo" />
+<h3>
+Moneyaard <br />
+<span style="color: black; font-size: 15px">Make Money online</span>
+</h3>
+</div>
+<div class="footer_box">
+<h3>HELPFUL LINKS</h3>
+<a href="About_us.html">About Us</a>
+<a href="contact_us.html">Contact Us</a>
+<a href="privacy_policy.html">Privacy policy</a>
+<a href="terms_and_condition.html">Terms & Condition</a>
+<a href="./sitemap.xml">sitmap</a>
+</div>
+<div class="footer_box">
+<h3>GET IN TOUCH</h3>
+<a href="mailto:moneyaard@gmail.com">Moneyaard@gmail.com</a>
+</div>
+<div class="footer_box">
+<h3>CONNECT WITH US</h3>
+<a href="https://www.facebook.com/manohar.anamd">Facebook</a>
+<a href="#">Twitter</a>
+<a href="https://youtu.be/Q1-4Zzfvglk">YouTube</a>
+<a href="#">Instagram</a>
+<a href="https://www.linkedin.com/in/manohar-anand-4177701b6"
+>Linkedin</a
+>
+</div>
+<p>
+Copyright © 2023 All Right Reserved By Moneyaard.
+</p>
+</div>
+</footer>
+<script src="AddPost.js" type="text/javascript" charset="utf-8"></script>
+<script src="index.js" type="text/javascript" charset="utf-8"></script>
+<script src="explore.js" type="text/javascript" charset="utf-8"></script>
+<script src="home.js" type="text/javascript" charset="utf-8"></script>
+<script src="firebase.js" type="module" charset="utf-8"></script>
 </body>
