--- a/Moneyaard_Post/Monetize-YouTube-Channel-Without-1000-Subscribers-4000-Watch-Time-YT-Update-2023.html
+++ b/Moneyaard_Post/Monetize-YouTube-Channel-Without-1000-Subscribers-4000-Watch-Time-YT-Update-2023.html
@@ -17,7 +17,8 @@ crossorigin="anonymous"
 ></script>
 <link rel="stylesheet" href="Moneyaard_Post.css" type="text/css" />
 <link rel="icon" type="image/png" href="../assets/Moneyaard_logo.png" />
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4365651039511906"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -89,6 +90,19 @@ The latest YouTube update in 2023 has introduced new opportunities for creators 
 <p>
 This blog post aims to provide you with detailed knowledge about the new policy of YouTube monetization and I gave you some tips and tricks to monetize your YouTube channel fast. Let&#39;s go.
 </p>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4365651039511906"
+     crossorigin="anonymous"></script>
+<!-- Moneyaard Ads -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4365651039511906"
+     data-ad-slot="1110066686"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 <h2 id="1-understanding-the-youtube-update-2023">1. Understanding the YouTube Update 2023</h2>
 <p>
 Starting from June 13th, 2023, YouTube has expanded its monetization policy to provide creators with earlier access to the YouTube Partner Program. Creators now have the opportunity to qualify for fan funding, provided they meet the following criteria:
