--- a/index.html
+++ b/index.html
@@ -36,11 +36,8 @@ gtag("js", new Date());
 gtag("config", "G-6J3NTTQECM");
 </script>
 <!-- adsense code  -->
-<script
-async
-src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3774675720442745"
-crossorigin="anonymous"
-></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4365651039511906"
+crossorigin="anonymous"></script>
 </head>
 <body>
 <!-- top navigation  -->
