--- a/Moneyaard_Post/How-did-Andrew-Tate-make-his-money.html
+++ b/Moneyaard_Post/How-did-Andrew-Tate-make-his-money.html
@@ -790,27 +790,66 @@ It&#39;s important to note that Andrew Tate&#39;s luxury showoff is a deliberate
 <p>
 Here&#39;s the information about most expensive Andrew tate cars collections
 </p>
-<p>
-| Car Model               | Description                                                                                                 |
-</p>
-<p>
-|-------------------------|-------------------------------------------------------------------------------------------------------------|
-</p>
-<p>
-| Lamborghini Aventador   | Italian luxury sports car known for its sleek design, powerful V12 engine, and exhilarating performance.       |
-</p>
-<p>
-| Rolls-Royce Wraith      | Luxury grand tourer with impeccable craftsmanship, opulent interior, and a smooth driving experience.         |
-</p>
-<p>
-| Ferrari 488 Pista       | High-performance supercar with stunning design, exceptional aerodynamics, and blistering speed.              |
-</p>
-<p>
-| Mercedes-AMG G63        | Commanding presence and off-road capabilities, offering a blend of luxury and performance.                    |
-</p>
-<p>
-| Range Rover Autobiography | Luxurious SUV favored by the elite, known for its comfort, style, and versatility.                            |
-</p>
+<table>
+<thead>
+<tr>
+<th>Car Model</th>
+<th>Year</th>
+<th>Make</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Lamborghini Aventador S</td>
+<td>2020</td>
+<td>Lamborghini</td>
+<td>Supercar with powerful V12 engine and distinctive design.</td>
+</tr>
+<tr>
+<td>Ferrari 488 GTB</td>
+<td>2017</td>
+<td>Ferrari</td>
+<td>High-performance sports car with a mid-engine layout.</td>
+</tr>
+<tr>
+<td>Rolls-Royce Ghost</td>
+<td>2021</td>
+<td>Rolls-Royce</td>
+<td>Luxury sedan known for its opulence and smooth ride.</td>
+</tr>
+<tr>
+<td>Mercedes-AMG G63</td>
+<td>2022</td>
+<td>Mercedes-Benz</td>
+<td>Luxury SUV with a powerful engine and off-road capabilities.</td>
+</tr>
+<tr>
+<td>Bentley Continental GT</td>
+<td>2019</td>
+<td>Bentley</td>
+<td>Grand tourer known for its luxurious features and performance.</td>
+</tr>
+<tr>
+<td>Porsche 911 Turbo S</td>
+<td>2021</td>
+<td>Porsche</td>
+<td>Iconic sports car with impressive speed and handling.</td>
+</tr>
+<tr>
+<td>Range Rover Autobiography</td>
+<td>2020</td>
+<td>Land Rover</td>
+<td>Premium SUV with a spacious interior and advanced features.</td>
+</tr>
+<tr>
+<td>McLaren 720S</td>
+<td>2018</td>
+<td>McLaren</td>
+<td>High-performance supercar with a sleek design and impressive speed.</td>
+</tr>
+</tbody>
+</table>
 <h2 id="andrew-tate-daily-routine">Andrew tate daily routine</h2>
 <p>
 Andrew Tate, a former professional kickboxer and entrepreneur, is known for his disciplined and focused approach to life. While specific details of his daily routine may vary, here is an example of what Andrew Tate&#39;s daily routine might look like:
