--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@ gtag("config", "G-6J3NTTQECM");
 <!-- adsense code  -->
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4365651039511906"
 crossorigin="anonymous"></script>
+<!-- Pintrest Verification -->
+  <meta name="p:domain_verify" content="db0820ddcf1333a64397c531aed4da5e"/>
 </head>
 <body>
 <!-- top navigation  -->
