--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ gtag("config", "G-6J3NTTQECM");
 
 <!-- Pintrest Verification -->
   <meta name="p:domain_verify" content="db0820ddcf1333a64397c531aed4da5e"/>
+  <meta name="surfe.pro" content="56c9a7e00908cb4a1f8851bf89d3880f">
 </head>
 <body>
 <!-- top navigation  -->
